--- a/ufb.common/pom.xml
+++ b/ufb.common/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.0.9</version>
         </dependency>
+        <dependency>
+         <groupId>org.apache.commons</groupId>
+  		 <artifactId>commons-lang3</artifactId>
+  		 <version>3.3</version>
+  		 </dependency>
 	</dependencies>
 	
 	<build>
