--- a/ufb.dao/pom.xml
+++ b/ufb.dao/pom.xml
@@ -54,33 +54,35 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-				<source>1.6</source>
-				<target>1.6</target>
-				<encoding>UTF-8</encoding>
-				<!-- <compilerArgument>-proc:only</compilerArgument> -->
-				<compilerArgument>-XDignore.symbol.file</compilerArgument>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.alibaba.citrus.tool</groupId>
-				<artifactId>autoconfig-maven-plugin</artifactId>
-				<version>1.2</version>
-				<configuration>
-				</configuration>
-				<executions>
-					<execution>
-						<id>compile</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>autoconfig</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>UTF-8</encoding>
+					<!-- <compilerArgument>-proc:only</compilerArgument> -->
+					<compilerArgument>-XDignore.symbol.file</compilerArgument>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>com.alibaba.citrus.tool</groupId>
+					<artifactId>autoconfig-maven-plugin</artifactId>
+					<version>1.2</version>
+					<configuration>
+					</configuration>
+					<executions>
+						<execution>
+							<id>compile</id>
+							<phase>compile</phase>
+							<goals>
+								<goal>autoconfig</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
