--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
 		<module>ufb.remote</module>
 		<module>ufb.service</module> 
 		<module>ufb.common</module>
-		<module>ufb.file</module> 
 	</modules>
 
 	<properties>
@@ -118,10 +117,10 @@
 				<version>1.4</version>
 			</dependency>
 			<dependency>
-				<groupId>commons-lang</groupId>
-				<artifactId>commons-lang</artifactId>
-				<version>2.6</version>
-			</dependency>
+		         <groupId>org.apache.commons</groupId>
+		  		 <artifactId>commons-lang3</artifactId>
+		  		 <version>3.3</version>
+	  		</dependency>
 			<dependency>
 				<groupId>org.apache.velocity</groupId>
 				<artifactId>velocity</artifactId>
