--- a/ufb.web/src/main/webapp/WEB-INF/web.xml
+++ b/ufb.web/src/main/webapp/WEB-INF/web.xml
@@ -49,7 +49,7 @@
 	
 	<servlet>
 		<servlet-name>CreateImageServlet</servlet-name>
-		<servlet-class>com.ufufund.trade.ufb.web.servlet.CreateImageServlet</servlet-class>
+		<servlet-class>com.ufufund.ufb.web.servlet.CreateImageServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>CreateImageServlet</servlet-name>
