--- a/ufb.biz/pom.xml
+++ b/ufb.biz/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.ufufund.trade</groupId>
+		<groupId>com.ufufund</groupId>
 		<artifactId>ufb.parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>ufb-biz</artifactId>
-	<groupId>com.ufufund.trade.ufb</groupId>
+	<groupId>com.ufufund.ufb</groupId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<version>${ufb.version}</version>
@@ -15,27 +15,27 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.ufufund.trade.ufb</groupId>
+			<groupId>com.ufufund.ufb</groupId>
 			<artifactId>ufb-model</artifactId>
 			<version>${ufb.version}</version>
 		</dependency> 
 		<dependency>
-			<groupId>com.ufufund.trade.ufb</groupId>
+			<groupId>com.ufufund.ufb</groupId>
 			<artifactId>ufb-common</artifactId>
 			<version>${ufb.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.ufufund.trade.ufb</groupId>
+			<groupId>com.ufufund.ufb</groupId>
 			<artifactId>ufb-dao</artifactId>
 			<version>${ufb.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.ufufund.trade.ufb</groupId>
+			<groupId>com.ufufund.ufb</groupId>
 			<artifactId>ufb-remote</artifactId>
 			<version>${ufb.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.ufufund.trade.ufb</groupId>
+			<groupId>com.ufufund.ufb</groupId>
 			<artifactId>ufb-service</artifactId>
 			<version>${ufb.version}</version>
 		</dependency>
