--- a/ufb.dao/pom.xml
+++ b/ufb.dao/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.ufufund.trade</groupId>
+		<groupId>com.ufufund</groupId>
 		<artifactId>ufb.parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>ufb-dao</artifactId>
-	<groupId>com.ufufund.trade.ufb</groupId>
+	<groupId>com.ufufund.ufb</groupId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<description>幼富宝 dao module</description>
@@ -15,7 +15,7 @@
 	<dependencies>
 		<dependency>
 			<artifactId>ufb-model</artifactId>
-			<groupId>com.ufufund.trade.ufb</groupId>
+			<groupId>com.ufufund.ufb</groupId>
 			<version>${ufb.version}</version>
 		</dependency>
 		<dependency>
