--- a/ufb.web/pom.xml
+++ b/ufb.web/pom.xml
@@ -3,29 +3,29 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.ufufund.trade</groupId>
+		<groupId>com.ufufund</groupId>
 		<artifactId>ufb.parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>ufb-web</artifactId>
-	<groupId>com.ufufund.trade.ufb</groupId>
+	<groupId>com.ufufund.ufb</groupId>
 	<name>${project.artifactId}</name>
 	<packaging>war</packaging>
 	<description>web模块，包含java web，页面资源等</description>
 	<version>${ufb.version}</version>
 	<dependencies>
 		<dependency>
-			<groupId>com.ufufund.trade.ufb</groupId>
+			<groupId>com.ufufund.ufb</groupId>
 			<artifactId>ufb-model</artifactId>
 			<version>${ufb.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.ufufund.trade.ufb</groupId>
+			<groupId>com.ufufund.ufb</groupId>
 			<artifactId>ufb-common</artifactId>
 			<version>${ufb.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.ufufund.trade.ufb</groupId>
+			<groupId>com.ufufund.ufb</groupId>
 			<artifactId>ufb-biz</artifactId>
 			<version>${ufb.version}</version>
 		</dependency>
