--- a/ufb.common/pom.xml
+++ b/ufb.common/pom.xml
@@ -39,6 +39,22 @@
 	         <groupId>org.apache.commons</groupId>
 	  		 <artifactId>commons-lang3</artifactId>
   		</dependency>
+  		<!-- httpclient暂不使用
+  		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>4.4</version>
+		</dependency> -->
 	</dependencies>
 	
 	<build>
