--- a/ufb.web/src/main/webapp/WEB-INF/web.xml
+++ b/ufb.web/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,10 @@
 	
 	<!-- filter初始化 -->
 	<filter>
+      <filter-name>servletFilter</filter-name>
+      <filter-class>com.ufufund.ufb.web.filter.ServletHolderFilter</filter-class>
+    </filter>
+	<filter>
       <filter-name>encodingFilter</filter-name>
       <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
       <init-param>
@@ -30,6 +34,10 @@
     </filter>
     
     <!-- filter匹配url -->
+    <filter-mapping>
+      <filter-name>servletFilter</filter-name>
+      <url-pattern>/*</url-pattern>
+    </filter-mapping>
 	<filter-mapping>
       <filter-name>encodingFilter</filter-name>
       <url-pattern>/*</url-pattern>
