--- a/ufb.common/pom.xml
+++ b/ufb.common/pom.xml
@@ -39,7 +39,6 @@
 	         <groupId>org.apache.commons</groupId>
 	  		 <artifactId>commons-lang3</artifactId>
   		</dependency>
-  		<!-- httpclient暂不使用
   		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
@@ -54,7 +53,7 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
 			<version>4.4</version>
-		</dependency> -->
+		</dependency> 
 	</dependencies>
 	
 	<build>
