--- a/ufb.model/pom.xml
+++ b/ufb.model/pom.xml
@@ -15,6 +15,12 @@
 	<version>${ufb.version}</version>
 	
 	<dependencies>
+		<dependency>
+			<groupId>com.ufufund.ufb</groupId>
+			<artifactId>ufb-common</artifactId>
+			<version>${ufb.version}</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
