--- a/ufb.web/src/main/webapp/WEB-INF/web.xml
+++ b/ufb.web/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,10 @@
       <filter-name>servletFilter</filter-name>
       <filter-class>com.ufufund.ufb.web.filter.ServletHolderFilter</filter-class>
     </filter>
+    <filter>
+      <filter-name>refreshFilter</filter-name>
+      <filter-class>com.ufufund.ufb.web.filter.RefreshHolderFilter</filter-class>
+    </filter>
 	<filter>
       <filter-name>encodingFilter</filter-name>
       <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -36,6 +40,10 @@
     <!-- filter匹配url -->
     <filter-mapping>
       <filter-name>servletFilter</filter-name>
+      <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+      <filter-name>refreshFilter</filter-name>
       <url-pattern>/*</url-pattern>
     </filter-mapping>
 	<filter-mapping>
