添加交易页面拦截器HftTradeInterceptor

--- a/ufb.web/src/main/webapp/WEB-INF/web.xml
+++ b/ufb.web/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,9 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:/spring/spring-ufb-biz.xml,classpath*:/spring/spring-ufb-web.xml</param-value>
+        <param-value>
+        	classpath*:/spring/spring-ufb-biz.xml,classpath*:/spring/spring-ufb-web.xml
+        </param-value>
     </context-param>
 
     <listener>
