--- a/ufb.web/pom.xml
+++ b/ufb.web/pom.xml
@@ -135,6 +135,12 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<finalName>ufb</finalName>
