--- a/ufb.biz/pom.xml
+++ b/ufb.biz/pom.xml
@@ -52,6 +52,16 @@
             <artifactId>spring-aop</artifactId>
         </dependency>
         <dependency>
+	        <groupId>org.aspectj</groupId>
+	        <artifactId>aspectjweaver</artifactId>
+	        <version>1.7.4</version>
+	    </dependency>
+	    <dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+        <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
