redisclient添加及短信发送量控制

--- a/ufb.web/src/main/resources/config/spring-ufb-all.properties
+++ b/ufb.web/src/main/resources/config/spring-ufb-all.properties
@@ -11,6 +11,6 @@ ufb.hftfund.signKey=8db4a013a8b515349c307f1e448ce836
 ufb.bcloud.uri=http://222.73.117.158/msg/
 ufb.bcloud.account=testuser
 ufb.bcloud.password=pwd123456
-# 接收配置
-ufb.bcould.receiver=ufufund
-ufb.bcould.pswd=upwd185726
+# 短信发送量控制
+ufb.msg.mobile_per_day=10
+ufb.msg.system_per_day=100
