--- a/ufb.common/pom.xml
+++ b/ufb.common/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>lombok</artifactId>
 			<version>1.16.4</version>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.7.3</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
