--- a/ufb.web/src/main/resources/config/spring-ufb-all.properties
+++ b/ufb.web/src/main/resources/config/spring-ufb-all.properties
@@ -14,3 +14,10 @@ ufb.bcloud.password=pwd123456
 # 短信发送量控制
 ufb.msg.mobile_per_day=10
 ufb.msg.system_per_day=100
+
+#学生档案-下载、上传
+ufb.school.excel_template_file=E:\\workspace\\ufufund\\excel\\template\\幼富通-学生档案摸版-1.0.xlsx
+ufb.school.excel_template_num=50
+ufb.school.excel_template_pwd=5D3t08B0
+ufb.school.excel_download_dir=E:\\workspace\\ufufund\\ufb-master\\ufb\\ufb.web\\src\\main\\webapp\\excel\\
+ufb.school.excel_upload_dir=E:\\workspace\\ufufund\\excel\\upload\\
