--- a/ufb.web/src/test/resources/config/spring-ufb-all.properties
+++ b/ufb.web/src/test/resources/config/spring-ufb-all.properties
@@ -16,8 +16,8 @@ ufb.msg.mobile_per_day=10
 ufb.msg.system_per_day=100
 
 #学生档案-下载、上传
-ufb.school.excel_template_file=/opt/files/excel/template/student-template-1.0.xlsx
+ufb.school.excel_template_file=E:\\workspace\\ufufund\\excel\\template\\student-template-1.0.xlsx
 ufb.school.excel_template_num=50
 ufb.school.excel_template_pwd=5D3t08B0
-ufb.school.excel_download_dir=/usr/local/resin4.0/webapps/ufb/excel/
-ufb.school.excel_upload_dir=/opt/files/excel/upload/
+ufb.school.excel_download_dir=E:\\workspace\\ufufund\\ufb-master\\ufb\\ufb.web\\src\\main\\webapp\\excel\\
+ufb.school.excel_upload_dir=E:\\workspace\\ufufund\\excel\\upload\\
