--- a/ufb.biz/src/test/resources/config/spring-ufb-all.properties
+++ b/ufb.biz/src/test/resources/config/spring-ufb-all.properties
@@ -6,8 +6,16 @@ ufb.hftfund.signKey=8db4a013a8b515349c307f1e448ce836
 ##ufb.hftfund.requestUrl=http://58.247.136.183:8008/ecg/ecsg/prepositionaccess
 ##ufb.hftfund.signKey=8db4a013a8b515349c307f1e448ce836
 
-################ 蓝创短信配置  #####################
-# 发送配置
+## 银联配置
+ufb.chinapay.requestUrl=http://59.41.103.98:333/gzdsf/ProcessServlet
+ufb.chinapay.username=operator
+ufb.chinapay.userpass=operator
+ufb.chinapay.merchantId=001053110000001
+ufb.chinapay.publicKey=/opt/files/cert/gzdsf.cer
+ufb.chinapay.privateKey=/opt/files/cert/ORA@TEST1.pfx
+ufb.chinapay.privateKeyPwd=123456
+
+# 蓝创短信配置
 ufb.bcloud.uri=http://222.73.117.158/msg/
 ufb.bcloud.account=testuser
 ufb.bcloud.password=pwd123456
@@ -16,8 +24,8 @@ ufb.msg.mobile_per_day=10
 ufb.msg.system_per_day=100
 
 #学生档案-下载、上传
-ufb.school.excel_template_file=E:\\workspace\\ufufund\\excel\\template\\幼富通-学生档案摸版-1.0.xlsx
+ufb.school.excel_template_file=/opt/files/excel/template/student-template-1.0.xlsx
 ufb.school.excel_template_num=50
 ufb.school.excel_template_pwd=5D3t08B0
-ufb.school.excel_download_dir=E:\\workspace\\ufufund\\ufb-master\\ufb\\ufb.web\\src\\main\\webapp\\excel
-ufb.school.excel_upload_dir=E:\\workspace\\ufufund\\excel\\upload\\
+ufb.school.excel_download_dir=/usr/local/resin4.0/webapps/ufb/excel/
+ufb.school.excel_upload_dir=/opt/files/excel/upload/
