--- a/ufb.web/src/main/resources/config/spring-ufb-all.properties
+++ b/ufb.web/src/main/resources/config/spring-ufb-all.properties
@@ -27,10 +27,11 @@ ufb.msg.system_per_day=100
 ufb.school.excel_template_file=/opt/files/excel/template/student-template-1.0.xlsx
 ufb.school.excel_template_num=50
 ufb.school.excel_template_pwd=5D3t08B0
-#ufb.school.excel_download_dir=/usr/local/resin4.0/webapps/ufb/excel/
+ufb.school.excel_download_dir=/usr/local/resin4.0/webapps/ufb/excel/
 ufb.school.excel_upload_dir=/opt/files/excel/upload/
-ufb.school.excel_download_dir=E:/workspace/ufufund/ufb-master/ufb/ufb.web/src/main/webapp/excel/
+#ufb.school.excel_download_dir=E:/workspace/ufufund/ufb-master/ufb/ufb.web/src/main/webapp/excel/
 
 #机构证件照上传目录
 ufb.corp.infopic=/opt/files/corp/infopic/
-ufb.corp.infopic_web=D:/yftworkspace/ufb_master/ufb/ufb.web/src/main/webapp/infopic/
+ufb.corp.infopic_web=/usr/local/resin4.0/webapps/ufb/infopic/
+#ufb.corp.infopic_web=D:/yftworkspace/ufb_master/ufb/ufb.web/src/main/webapp/infopic/
