--- a/ufb.web/src/main/webapp/WEB-INF/web.xml
+++ b/ufb.web/src/main/webapp/WEB-INF/web.xml
@@ -78,6 +78,6 @@
 	</error-page>
 	<error-page>
 		<error-code>500</error-code>
-		<location>/error/syserr.htm</location>
+		<location>/error/500.htm</location>
 	</error-page>
 </web-app>
