--- a/ufb.web/src/main/resources/config/spring-ufb-all.properties
+++ b/ufb.web/src/main/resources/config/spring-ufb-all.properties
@@ -32,6 +32,6 @@ ufb.school.excel_upload_dir=/opt/files/excel/upload/
 #ufb.school.excel_download_dir=E:/workspace/ufufund/ufb-master/ufb/ufb.web/src/main/webapp/excel/
 
 #机构证件照上传目录
-ufb.corp.infopic=/opt/files/corp/infopic/
-ufb.corp.infopic_web=/usr/local/resin4.0/webapps/ufb/infopic/
+#ufb.corp.infopic=/opt/files/corp/infopic/
+#ufb.corp.infopic_web=/usr/local/resin4.0/webapps/ufb/infopic/
 #ufb.corp.infopic_web=D:/yftworkspace/ufb_master/ufb/ufb.web/src/main/webapp/infopic/
